# python-book-store-cli-application

./: pyproject.toml
src/bookstore/dto/book/: add_book_request_dto.py  add_book_response_dto.py  get_book_by_id_request_dto.py  get_book_response_dto.py  get_books_by_author_request_dto.py  get_books_by_title_request_dto.py  get_books_response_dto.py  update_book_by_id_request_dto.py  update_book_quantity_by_id_request_dto.py
src/bookstore/exception/: ValidationError.py  operation_aborted_error.py  validation_error.py
src/bookstore/mapper/book/: book_mapper.py  book_record_mapper.py
src/bookstore/model/book/: book_record.py
src/bookstore/model/book/enums/: availability.py
src/bookstore/printer/: book_store_printer.py  console_book_store_printer.py
src/bookstore/reader/: book_store_input_reader.py  console_book_store_input_reader.py
src/bookstore/repositories/: book_repository.py  in_memory_book_repository.py
src/bookstore/service/: book_input_service.py  console_book_input_service.py
src/bookstore/utils/facade/: facade_constants.py
src/bookstore/utils/input/: book_input_service_constants.py  input_field_constants.py  input_validators_constants.py
src/bookstore/validators/: id_input_validator.py  isbn_input_validator.py  name_input_validator.py  price_input_validator.py  quantity_input_validator.py  validator.py
src/bookstore/validators/field/: input_field.py
tests/bookstore_test/: main_test.py
