[tool.poetry]
name = "bookstore"
version = "0.1.0"
description = "A book store cli application in python"
authors = ["Nicola Rossi <ncl.rss.92@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pytest = "7.4.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
